--- a/platformio.ini
+++ b/platformio.ini
@@ -27,3 +27,5 @@ lib_deps =
 	arduino-libraries/NTPClient@^3.2.1
 	bodmer/TFT_eWidget@^0.0.6
 	bitbank2/PNGdec@^1.0.2
+
+lib_ignore = AsyncTCP_RP2040W
